--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="right-section">
       
       <p style="vertical-align:top;">If you have a love for music and a desire to connect with others who share your passion, then our Music Club is the perfect place for you! Join us today to explore different genres, participate in fun events, learn new skills, and become part of a vibrant community where every beat brings people together.</p>
-    
+    <fieldset>
   <div class="form-group">
     <styllabel for="firstname">FULL NAME:</label>
     <input type="text" id="firstname" name="firstname" placeholder="Enter your fname">
@@ -30,6 +30,7 @@
     <label for="firstname">CONTACT NUMBER:</label>
     <input type="text" id="firstname" name="firstname" placeholder="Enter your Number">
   </div>
+    </fieldset>
     <!-- Form Right Section -->
     <div class="form-right">
       <label>Gender:</label>
