--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
   
 <h1><strong>Music Club Form</strong></h1>
   <div class="container">
-    <!-- Left Section -->
     <a href="https://ibb.co/jv8L2Y00"><img src="https://i.ibb.co/Z6fhPr44/music-club-neon-logo-sign-emblem-symbol-poster-118419-90.jpg" height="300" width="300" alt="music-club-neon-logo-sign-emblem-symbol-poster-118419-90" border="0"></a>
     <div class="right-section">  
-      <p style="vertical-align:top;">If you have a love for music and a desire to connect with others who share your passion, then our Music Club is the perfect place for you! Join us today to explore different genres, participate in fun events, learn new skills, and become part of a vibrant community where every beat brings people together.</p>
+      <p style="vertical-align:top;">If you have a love for music and a desire to connect with others who share your passion, then our Music Club is the perfect place for you! Join us today to explore different genres, participate in fun events, learn new skills, and become part of a vibrant community where every beat brings people together.>
     <fieldset>
   <div class="form-group">
     <styllabel for="firstname">FULL NAME:</label>
@@ -50,5 +49,5 @@
   <input type="submit" value="Submit">
   <input type="Reset" value="Reset">
 </form>
-</body>
+    </body>
     </html>
